--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,10 +29,15 @@
     font-family: InterVariable, sans-serif;
   }
 }
-
+.phone-container-con {
+  @apply flex flex-col md:flex-row gap-2 items-start w-full max-w-5xl;
+}
+.phone-container {
+  @apply  order-1 md:order-2 w-full gap-4 md:w-1/3 flex md:h-[400px] justify-center
+}
 /* Phone UI */
 .phone {
-  @apply relative bg-gray-900 w-72 h-[545px] rounded-3xl border-4 border-[#283CFF] shadow-lg flex flex-col items-center justify-center;
+  @apply relative bg-gray-900 w-72 h-[400px] rounded-3xl border-4 border-[#283CFF] shadow-lg flex flex-col items-center justify-center;
 }
 
 /* Slide to Answer Button */
@@ -45,7 +50,7 @@
 
 /* Voice Grid */
 .voice-grid {
-  @apply grid grid-cols-4 gap-4 mt-4;
+  @apply grid grid-cols-2 sm:grid-cols-4 gap-4 mt-4;
 }
 .voice-btn {
   @apply p-3 border rounded-md flex flex-col items-center text-gray-700 text-lg transition;
