--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import Cta from "../components/global/Cta.astro";
   <SectionOne />
   <SectionTwo />
   <Testimonial />
-  <Pricing />
+  <!-- <Pricing /> -->
   <Cta />
 
 </BaseLayout>
