cookie polices added

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -54,8 +54,8 @@ import Footer from "../components/global/Footer.astro";
             dismiss: "Accept All",
             allow: "Allow Essential",
             deny: "Reject",
-            // link: 'Learn more',
-            // href: '/cookie-policy', // Replace with your policy page link
+            link: 'Learn more',
+            href: 'https://aiagencyplus.com/cookie-policy/', // Replace with your policy page link
           },
         });
       });
