--- a/src/components/infopages/Privacy.astro
+++ b/src/components/infopages/Privacy.astro
@@ -77,8 +77,67 @@
         <p>
           If we or our subsidiaries are involved in a merger, acquisition, or asset sale, your Personal Information may be transferred.
         </p>
+        <h3>What Are Cookies</h3>
+        <p>
+          As is common practice with almost all professional websites this site uses cookies, which are tiny files that are downloaded to your computer, to improve your experience. This page describes what information they gather, how we use it and why we sometimes need to store these cookies. We will also share how you can prevent these cookies from being stored however this may downgrade or ‘break’ certain elements of the sites functionality.
+        </p>
+        <h3>How We Use Cookies</h3>
+        <p>
+          We use cookies for a variety of reasons detailed below. Unfortunately in most cases there are no industry standard options for disabling cookies without completely disabling the functionality and features they add to this site. It is recommended that you leave on all cookies if you are not sure whether you need them or not in case they are used to provide a service that you use.
+        </p>
+        <h3>Disabling Cookies</h3>
+        <p>
+          You can prevent the setting of cookies by adjusting the settings on your browser (see your browser Help for how to do this). Be aware that disabling cookies will affect the functionality of this and many other websites that you visit. Disabling cookies will usually result in also disabling certain functionality and features of the this site. Therefore it is recommended that you do not disable cookies.
+        </p>
+        
+    <h2>The Cookies We Set</h2>
+
+    <h3>Account Related Cookies</h3>
+    <p>If you create an account with us, we will use cookies for managing the signup process and general administration. These cookies will usually be deleted when you log out; however, in some cases, they may remain afterwards to remember your site preferences when logged out.</p>
+
+    <h3>Email Newsletters Related Cookies</h3>
+    <p>This site offers newsletter or email subscription services, and cookies may be used to remember if you are already registered and whether to show certain notifications which might only be valid to subscribed/unsubscribed users.</p>
+
+    <h3>Orders Processing Related Cookies</h3>
+    <p>This site offers e-commerce or payment facilities, and some cookies are essential to ensure that your order is remembered between pages so that we can process it properly.</p>
+
+    <h3>Forms Related Cookies</h3>
+    <p>When you submit data through a form, such as those found on contact pages or comment forms, cookies may be set to remember your user details for future correspondence.</p>
+
+    <h3>Site Preferences Cookies</h3>
+    <p>In order to provide you with a great experience on this site, we provide the functionality to set your preferences for how this site runs when you use it. To remember your preferences, we need to set cookies so that this information can be called whenever you interact with a page affected by your preferences.</p>
+
+    <h2>Third-Party Cookies</h2>
+
+    <p>In some special cases, we also use cookies provided by trusted third parties. The following section details which third-party cookies you might encounter through this site.</p>
+
+    <h3>Google Analytics</h3>
+    <p>This site uses Google Analytics, one of the most widespread and trusted analytics solutions on the web, to help us understand how you use the site and ways that we can improve your experience. These cookies may track things such as how long you spend on the site and the pages you visit so we can continue to produce engaging content.</p>
+    <p>For more information on Google Analytics cookies, see the official <a href="https://policies.google.com/technologies/cookies" target="_blank">Google Analytics page</a>.</p>
+
+    <h3>Third-Party Analytics</h3>
+    <p>Third-party analytics are used to track and measure the usage of this site so that we can continue to produce engaging content. These cookies may track things such as how long you spend on the site or pages you visit, which helps us understand how we can improve the site for you.</p>
+
+    <h3>Testing New Features</h3>
+    <p>From time to time, we test new features and make subtle changes to how the site is delivered. When we are still testing new features, these cookies may be used to ensure that you receive a consistent experience on the site while ensuring we understand which optimizations our users appreciate the most.</p>
+
+    <h3>Purchase Analytics</h3>
+    <p>As we sell products, it is important for us to understand statistics about how many visitors to our site actually make a purchase. This data helps us make accurate business predictions that allow us to monitor our advertising and product costs to ensure the best possible price.</p>
+
+    <h3>Advertising Cookies</h3>
+    <p>We use adverts to offset the costs of running this site and provide funding for further development. The behavioral advertising cookies used by this site are designed to ensure that we provide you with the most relevant adverts where possible by anonymously tracking your interests and presenting similar things that may be of interest.</p>
+
+    <h3>Affiliate Tracking Cookies</h3>
+    <p>Several partners advertise on our behalf, and affiliate tracking cookies allow us to see if our customers have come to the site through one of our partner sites. This helps us credit them appropriately and, where applicable, allow our affiliate partners to provide any bonuses for making a purchase.</p>
+
+    <h3>Social Media Cookies</h3>
+    <p>We also use social media buttons and/or plugins on this site that allow you to connect with your social network in various ways. These social media sites may set cookies through our site, which may be used to enhance your profile on their site or contribute to the data they hold for various purposes outlined in their respective privacy policies.</p>
+
+    <h2>More Information</h2>
+    <p>Hopefully, this has clarified things for you. If you are unsure whether you need certain cookies, it is usually safer to leave cookies enabled in case they interact with one of the features you use on our site.</p>
         <h3>Updates</h3>
         <p>
+
           We are constantly reviewing our privacy policy and procedures to ensure that they meet best practices. This policy was last updated on January 01, 2024.
         </p>
         <h3>Contact Us</h3>
