new german c\voices added

--- a/src/pages/edemo.astro
+++ b/src/pages/edemo.astro
@@ -1,13 +1,13 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import AIPhoneUINoMail from "../components/vapi/AIPhoneUINoMail.jsx";
+import EPhone from "../components/vapi/Ephone.astro";
 ---
 <head>
   <title>Demo  </title>
 
+
+
 </head>
 <BaseLayout>
-
-      <AIPhoneUINoMail />
-
+      <EPhone />
 </BaseLayout>
