new german c\voices added

--- a/src/pages/edemo.astro
+++ b/src/pages/edemo.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import EPhone from "../components/vapi/Ephone.astro";
+import EPhone from "../components/vapi/PhoneE.astro";
 ---
 <head>
   <title>Demo  </title>
