google tag manager added

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -40,7 +40,11 @@ import "../styles/global.css";
 />
 <meta name="msapplication-TileColor" content="#ffffff" />
 <meta name="theme-color" content="#ffffff" />
-
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-TSM6R5NH');</script>
 <script async src="https://affonso.io/js/pixel.js" 
   data-affonso="cm3jhy64v00019giqqhxpcvsl" 
   data-cookie_duration="30">
