--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -63,6 +63,9 @@ import Footer from "../components/global/Footer.astro";
     <BaseHead />
   </head>
   <body class="bg-white flex flex-col min-h-svh">
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TSM6R5NH"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      
     <Navigation />
     <main class="grow"><slot /></main>
     <Footer />
