new blogs added

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -373,6 +373,41 @@
     image: "/images/Blogs/blog46.jpeg",
     link: "/Boosting-Lead-Generation-with-AI-Answering-Services",
   },
+  {
+    id: 47,
+    title: "Data-Driven Insights Leveraging AI Analytics to Improve Customer Service Strategies",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog47.png",
+    link: "/Data-Driven-Insights-Leveraging-AI-Analytics-to-Improve-Customer-Service-Strategies",
+  },
+  {
+    id: 48,
+    title: "AI-Driven Personalization Enhancing Customer Experience Through Intelligent Answering Services",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog48.png",
+    link: "/AI-Driven-Personalization-Enhancing-Customer-Experience-Through-Intelligent-Answering-Services",
+  },
+  {
+    id: 49,
+    title: "AI Answering Services for Small Businesses Leveling the Playing Field",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog49.png",
+    link: "/AI-Answering-Services-for-Small-Businesses-Leveling-the-Playing-Field",
+  },
+  {
+    id: 50,
+    title: "The Future of Retail AI-Powered Customer Service in the Age of E-commerce",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog50.png",
+    link: "/The-Future-of-Retail-AI-Powered-Customer-Service-in-the-Age-of-E-commerce",
+  },
+  {
+    id: 51,
+    title: "From Lead Generation to Customer Retention The Role of AI in the Sales Funnel",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog51.png",
+    link: "/From-Lead-Generation-to-Customer-Retention-The-Role-of-AI-in-the-Sales-Funnel",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
