--- a/src/components/infopages/products/Receptionist.astro
+++ b/src/components/infopages/products/Receptionist.astro
@@ -160,7 +160,7 @@ import Discover from './components/discover.astro'
 
   <!-- Testimonial Section -->
 
-  <Testimonial />
+  <!-- <Testimonial /> -->
 
   <!-- Ai FAQ Section -->
   <Faq />
