--- a/src/components/infopages/products/Service.astro
+++ b/src/components/infopages/products/Service.astro
@@ -191,7 +191,7 @@ import Discover from "./components/discover.astro";
   <Pricing />
 
   <!-- Testimonial Section -->
-  <Testimonial />
+  <!-- <Testimonial /> -->
 
   <!-- Ai FAQ Section -->
   <Faq />
