--- a/src/components/infopages/products/Receptionist.astro
+++ b/src/components/infopages/products/Receptionist.astro
@@ -1,7 +1,7 @@
 ---
 import Pricing from "../../landing/Pricing.astro";
 import LogoSlider from "../../global/slider/LogoSlider.jsx";
-import Testimonial from "./components/ProduuctTestimonials.astro";
+// import Testimonial from "./components/ProduuctTestimonials.astro";
 import Faq from "./components/faq.astro";
 import Integration from "./components/Integration.astro";
 import Discover from './components/discover.astro'
