--- a/src/components/infopages/products/Service.astro
+++ b/src/components/infopages/products/Service.astro
@@ -2,7 +2,7 @@
 import LogoSlider from "../../global/slider/LogoSlider";
 import Pricing from "../../landing/Pricing.astro";
 import Faq from "./components/faq.astro";
-import Testimonial from "./components/ProduuctTestimonials.astro";
+// import Testimonial from "./components/ProduuctTestimonials.astro";
 import Integration from "./components/Integration.astro";
 import Discover from "./components/discover.astro";
 ---
