--- a/src/components/infopages/products/components/ProduuctTestimonials.astro
+++ b/src/components/infopages/products/components/ProduuctTestimonials.astro
@@ -1,4 +1,4 @@
-<div class=" flex items-center justify-center py-5">
+<!-- <div class=" flex items-center justify-center py-5">
   <div class=" bg-white px-5 py-16 md:py-24 text-gray-500">
     <div class="">
       <div class="text-center max-w-xl mx-auto mb-8">
@@ -7,7 +7,6 @@
         >
           What people are saying.
         </p>
-        <!-- <h3 class="text-xl mb-5 font-light">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3> -->
         <div class="text-center mb-10">
           <span class="inline-block w-1 h-1 rounded-full bg-indigo-500 ml-1"
           ></span>
@@ -242,4 +241,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
