--- a/src/components/infopages/products/Receptionist.astro
+++ b/src/components/infopages/products/Receptionist.astro
@@ -166,5 +166,5 @@ import Discover from './components/discover.astro'
   <Faq />
 
   <!-- Pricing Section -->
-  <Pricing />
+  <!-- <Pricing /> -->
 </div>
