--- a/src/components/infopages/products/Concierge.astro
+++ b/src/components/infopages/products/Concierge.astro
@@ -196,7 +196,7 @@ import Discover from './components/discover.astro'
   <Integration />
   
   <!-- Pricing  Section -->
-  <Pricing />
+  <!-- <Pricing /> -->
 
   <!-- Testimonial Section -->
   <!-- <Testimonial /> -->
