--- a/src/components/infopages/products/Service.astro
+++ b/src/components/infopages/products/Service.astro
@@ -188,7 +188,7 @@ import Discover from "./components/discover.astro";
   <Integration />
 
   <!-- Pricing  Section -->
-  <Pricing />
+  <!-- <Pricing /> -->
 
   <!-- Testimonial Section -->
   <!-- <Testimonial /> -->
