new blogs added

--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -8,10 +8,12 @@
         alt=""
       />
       <img
-      class="hidden  lg:block w-full  lg:absolute"
+      class="hidden lg:block w-full lg:absolute"
+      style="height: -webkit-fill-available;"
       src="/images/compressed/Call Support image without bg.png"
-      alt=""
+      alt="Call Support"
     />
+    
     </div>
     <div
       class="pt-16 pb-24 sm:pb-32 sm:pt-24 lg:mx-auto lg:grid lg:max-w-7xl lg:grid-cols-2 lg:pt-32">
@@ -86,7 +88,7 @@
           <div class="mt-12">
             <a
               href="https://app.vohoai.com"
-              class="inline-flex items-center justify-center w-full gap-4 px-6 py-3 text-sm font-medium text-white transition rounded-xl bg-accent-600 group active:text-gray-900/60 active:transition-none outline-offset-2 hover:bg-white hover:text-black lg:w-auto"
+              class="inline-flex items-center justify-center w-full gap-4 px-6 py-3 text-sm font-medium text-white bg-black transition rounded-xl group active:text-gray-900/60 active:transition-none outline-offset-2 hover:bg-white hover:text-black lg:w-auto"
               >Create Free account now <span>→</span>
             </a>
           </div>
