--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -408,6 +408,13 @@
     image: "/images/Blogs/blog51.png",
     link: "/From-Lead-Generation-to-Customer-Retention-The-Role-of-AI-in-the-Sales-Funnel",
   },
+  {
+    id: 52,
+    title: "The Future of Customer Service: How AI Receptionists Are Transforming Businesses",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog52.png",
+    link: "/The-Future-of-Customer-Service-How-AI-Receptionists-Are-Transforming-Businesses",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
