gabber demo added

--- a/src/pages/demov3.astro
+++ b/src/pages/demov3.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Main from "../components/gabber/main.astro";
+import Gabber from "../components/gabber/gabber.astro";
+import Demo from "../components/gabber/components/Demo.tsx";
 
 ---
 <head>
@@ -8,6 +9,7 @@ import Main from "../components/gabber/main.astro";
 </head>
 <BaseLayout>
 
-  <Main client:load />
-
+  <!-- <Gabber client:load /> -->
+  <Demo client:load />
+  
 </BaseLayout>
