gabber demo added

--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -78,6 +78,11 @@
               class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
               >AI Concierge</a
             >
+            <a
+              href="/demov3"
+              class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
+              >demov3</a
+            >
             <!-- <a
               href="/ai-voice-demo"
               class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
