--- a/src/pages/demov3.astro
+++ b/src/pages/demov3.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Gabber from "../components/gabber/gabber.astro";
-import Demo from "../components/gabber/components/Demo.tsx";
+import Demo from "../components/gabber/components/demo";
 
 ---
 <head>
