--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -415,7 +415,22 @@
     image: "/images/Blogs/blog52.png",
     link: "/The-Future-of-Customer-Service-How-AI-Receptionists-Are-Transforming-Businesses",
   },
+  {
+    id: 53,
+    title: "AI Outbound Calls_ Revolutionizing Lead Generation and Customer Outreach",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog53.png",
+    link: "/AI-Outbound-Calls-Revolutionizing-Lead-Generation-and-Customer-Outreach",
+  },
+  {
+    id: 54,
+    title: "Top 5 Industries Benefiting from AI Answering Services",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog54.png",
+    link: "/Top-5-Industries-Benefiting-from-AI-Answering-Services",
+  },
 ];
+
 
  const reversedBlogs = [...blogs].reverse();
 
